    'difR v 4.7', 'ggplot2 v 2.2.1', 'mirt v 1.24', 'shiny 1.0.3' and
    'shinyjs v 0.9').

  * DIF/Fairness
    o Option of item purification was added into some DIF detection
      methods - Delta plot method, Mantel-Haneszel, Logistic regression
      with total score, Lord's test and Raju's test.
    o Default option of p-values adjustments in DIF detection methods
      was set to 'none'.
  * IRT models
    o IRT models are now fitted only by mirt package.
    o Training plots of item characteristic and information curves were
      added into IRT models section.
    o Pearson's correlation coefficient between factor scores and
      standardized total score was added for Bock's nominal IRT model.
  * Reports
    o New options for reports were added. By default no IRT models and
      no graphs of correlation structure are fitted.
    o Reports are now described in detail.
    o The settings of reports are now also offered in Report section.
    o Generation of reports is now done part by part. Once it is finished,
      the download button is offered.
    o Message boxs with warning for generation and download of reports
      were added.
  * Validity analysis:
    o Validity analysis of predictive outcome is now included on Validity
      page in Predictive validity section.
    o Now it is possible to upload predictive outcome.
    o Dataset 'GMAT' and 'GMATtest' from 'difNLR' package include now criterion
      variable which can be used in Predictive validity section.
    o Functions 'DistractorAnalysis()' and 'plotDistractorAnalysis()' were
      extended by 'matching' argument.
  * Item analysis
    o Barplot of answer selection proportion was added into Distractor
      subsection.
    o Diagram of custom discrimination - new version of DD plot - was
      added into Distractor subsection.

MINOR UPDATES

  o CITATION file was added.
  o Maximum upload size was set to 30MB.
  o Item names were fixed and unified.
  o Some typos were fixed.